crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK95/00
input: "foo:\n \tbar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
