crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__01.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 279
expression: snapshot
---
case_id: DK95/01
input: "foo: \"bar\n\tbaz\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_INDENT:tab character used as indentation is not allowed in YAML@10..11]
