crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK95/02
input: "foo: \"bar\n  \tbaz\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
