crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__03.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK95/03
input: " \t\nfoo: 1\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
