crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__07.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK95/07
input: "%YAML 1.2\n\t\n---\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
