crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK95__08.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DK95/08
input: "foo: \"bar\n \t \t baz \t \t \"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
